--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Whatsapp Gateway menggunakan NodeJS",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,5 +15,13 @@
     "socketio"
   ],
   "author": "Ibnu Raffi",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.2",
+    "http": "^0.0.1-security",
+    "qrcode": "^1.5.0",
+    "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.4.1",
+    "whatsapp-web.js": "^1.15.3"
+  }
 }
