--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "http": "^0.0.1-security",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
