--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "Ibnu Raffi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.14.0",
     "http": "^0.0.1-security",
     "qrcode": "^1.5.0",
